hw15: users statistic
